# mjqm-simulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  configure  convert_conf.py  ensure_same_results.py  main_allPols.cpp  oneOrAll_N32_0.6.toml  pyproject.toml  rebuild  simula  simulation_results_N32_T32_W1_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulation_results_N32_T32_W2_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulation_results_N32_T32_W3_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulation_results_N32_T32_W4_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulation_results_N32_T32_W5_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulation_results_N32_T32_W6_Exponential_ps0.600000_mus1.000000_mub1.000000.csv  simulator_smash.cpp  simulator_toml.cpp  smash_gr.out  toml_loader_test.cpp
.github/docs/: ci.yml  prism-treeview.min.css  prism.css  prism.js
.github/workflows/: ci.yml  docs.yml
Inputs/: arrRate_oneOrAll-test1.txt  arrRate_oneOrAll_N32_0.6.txt  arrRate_oneOrAll_N32_0.6_W2.txt  arrRate_oneOrAll_N32_0.6_W3.txt  arrRate_oneOrAll_N32_0.6_W4.txt  arrRate_oneOrAll_N32_0.6_W5.txt  arrRate_oneOrAll_N32_0.6_W6.txt  arrRate_oneOrAll_N32_0.8_W1.txt  arrRate_oneOrAll_N32_0.8_W2.txt  arrRate_oneOrAll_N32_0.8_W3.txt  arrRate_oneOrAll_N32_0.8_W4.txt  arrRate_oneOrAll_N32_0.8_W5.txt  arrRate_oneOrAll_N32_0.8_W6.txt  arrRate_oneOrAll_N32_0.95_W1.txt  arrRate_oneOrAll_N32_0.95_W2.txt  arrRate_oneOrAll_N32_0.95_W3.txt  arrRate_oneOrAll_N32_0.95_W4.txt  arrRate_oneOrAll_N32_0.95_W5.txt  arrRate_oneOrAll_N32_0.95_W6.txt  arrRate_oneOrAll_N32_0.96875_W1.txt  arrRate_oneOrAll_N32_0.96875_W2.txt  arrRate_oneOrAll_N32_0.96875_W3.txt  arrRate_oneOrAll_N32_0.96875_W4.txt  arrRate_oneOrAll_N32_0.96875_W5.txt  arrRate_oneOrAll_N32_0.96875_W6.txt  arrRate_oneOrAll_N32_0.999_W1.txt  arrRate_oneOrAll_N32_0.999_W2.txt  arrRate_oneOrAll_N32_0.999_W3.txt  arrRate_oneOrAll_N32_0.999_W4.txt  arrRate_oneOrAll_N32_0.999_W5.txt  arrRate_oneOrAll_N32_0.999_W6.txt  arrRate_oneOrAll_N32_0.99_W1.txt  arrRate_oneOrAll_N32_0.99_W2.txt  arrRate_oneOrAll_N32_0.99_W3.txt  arrRate_oneOrAll_N32_0.99_W4.txt  arrRate_oneOrAll_N32_0.99_W5.txt  arrRate_oneOrAll_N32_0.99_W6.txt  arrRate_oneOrAll_N32_0.9_W1.txt  arrRate_oneOrAll_N32_0.9_W2.txt  arrRate_oneOrAll_N32_0.9_W3.txt  (+27 more)
docs/: README.md  _sidebar.md  index.html  output_columns.md  report.md  run.md  settings.md  settings.schema.json  structure.md
docs/extend/: distributions.md  index.md  structure.md
libs/math/: CMakeLists.txt
libs/math/include/mjqm-math/: confidence_intervals.h  random.h  random_ecuyer.h  random_factory.h  random_mersenne.h  sampler.h  samplers.h
libs/math/include/mjqm-samplers/: bounded_pareto.hpp  deterministic.hpp  exponential.hpp  frechet.hpp  lognormal.hpp  pareto.hpp  sampler.h  samplers.h  uniform.hpp
libs/math/src/mjqm-math/: confidence_intervals.cpp  random_ecuyer.cpp  random_mersenne.cpp
libs/policies/: CMakeLists.txt
libs/policies/include/mjqm-policies/: AdaptiveMSF.h  BackFilling.h  BackFillingImperfect.h  BalancedSplitting.h  DualKill.h  FirstFit.h  KillSmart.h  MostServerFirst.h  QuickSwap.h  ServerFilling.h  ServerFillingMem.h  Smash.h  StaticMSF.h  policies.h  policy.h
libs/policies/src/mjqm-policies/: AdaptiveMSF.cpp  BackFilling.cpp  BackFillingImperfect.cpp  BalancedSplitting.cpp  DualKill.cpp  FirstFit.cpp  KillSmart.cpp  MostServerFirst.cpp  QuickSwap.cpp  ServerFilling.cpp  ServerFillingMem.cpp  Smash.cpp  StaticMSF.cpp
libs/policy/: CMakeLists.txt
libs/policy/include/mjqm-policy/: BackFilling.h  MostServerFirst.h  MostServerFirstSkip.h  MostServerFirstSkipThreshold.h  ServerFilling.h  ServerFillingMem.h  Smash.h  policies.h  policy.h
libs/policy/src/mjqm-policy/: BackFilling.cpp  MostServerFirst.cpp  MostServerFirstSkip.cpp  MostServerFirstSkipThreshold.cpp  ServerFilling.cpp  ServerFillingMem.cpp  Smash.cpp
libs/samplers/: CMakeLists.txt
libs/samplers/include/mjqm-samplers/: bounded_pareto.hpp  exponential.hpp  frechet.hpp  uniform.hpp
libs/simulator/: CMakeLists.txt
libs/simulator/include/mjqm-settings/: loader.hpp  toml_distributions_loaders.h  toml_loader.h  toml_overrides.h  toml_policies_loaders.h  toml_utils.h
libs/simulator/include/mjqm-simulator/: experiment.h  experiment_stats.h  simulator.h  stats.h
libs/simulator/src/mjqm-settings/: toml_distributions_loaders.cpp  toml_loader.cpp  toml_overrides.cpp  toml_policies_loaders.cpp  toml_utils.cpp
libs/simulator/src/mjqm-simulator/: experiment_stats.cpp  stats.cpp
libs/utils/: CMakeLists.txt
math/: CMakeLists.txt  confidence_intervals.cpp  confidence_intervals.h  sampler.h  samplers.cpp  samplers.h
math/samplers/: bounded_pareto.hpp  deterministic.hpp  exponential.hpp  frechet.hpp  pareto.hpp  uniform.hpp
policies/: BackFilling.cpp  BackFilling.h  CMakeLists.txt  MostServerFirst.cpp  MostServerFirst.h  MostServerFirstSkip.cpp  MostServerFirstSkip.h  MostServerFirstSkipThreshold.cpp  MostServerFirstSkipThreshold.h  ServerFilling.cpp  ServerFilling.h  ServerFillingMem.cpp  ServerFillingMem.h  Smash.cpp  Smash.h  policies.h  policy.h
scripts/: convert_conf.py  docs-to-pdf.sh  ensure_same_results.py  load_experiment_data.py  plot_cells.py  plot_cells_new.py  plotly_app.py  select-g++.sh
settings/: CMakeLists.txt  experiment.h  experiment.hpp  loader.hpp  toml_loader.cpp  toml_loader.h  toml_loader.hpp
simulator/: simulator.h
stats/: CMakeLists.txt  experiment_stats.cpp  experiment_stats.h  stats.h
test/Results/: overLambdas-nClasses4-N16-Win-2-Exponential-testing_4C_16.csv  overLambdas-nClasses4-N16-Win-3-Exponential-testing_4C_16.csv  overLambdas-nClasses4-N16-Win0-Exponential-testing_4C_16.csv  overLambdas-nClasses4-N16-Win1-Exponential-testing_4C_16.csv  overLambdas-nClasses4-N16-Win1-Uniform-testing_4C_16.csv
test/expected/: overLambdas-nClasses2-N50-Win1-Exponential-oneOrAll-test1.csv  overLambdas-nClasses4-N16-Win-2-Exponential-testing_4C_16.csv  overLambdas-nClasses4-N16-Win1-Frechet-testing_4C_16.csv  (+1 more)
(+6 files in other folders)
